<resources>
    <!--  得分榜单  -->
    <string name="chart">CgkIuJ39sp0FEAIQAA</string>

    <string name="app_name">Sudoku</string>
    <string name="app_name_pro">Sudoku Pro</string>

    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="challenge">Daily</string>
    <string name="daily">Daily Challenge</string>
    <string name="play">Play</string>
    <string name="newGame">New Game</string>
    <string name="continueGame">Continue</string>
    <string name="statistics">Statistics</string>
    <string name="newbie">Newbie</string>
    <string name="trainee">Trainee</string>
    <string name="primary">Primary</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="expert">Expert</string>
    <string name="guide1">never played</string>
    <string name="guide2">Played before, not proficient</string>
    <string name="guide3">Master! I am a master</string>
    <string name="pause">PAUSE</string>
    <string name="pause_info">Game is paused!\nProper use of prompts will help you complete the questions more smoothly.</string>

    <string name="startChallenge">Play Now</string>
    <string name="restartChange">try again(AD)</string>
    <string name="nan">NAN</string>
    <string name="total">Total</string>
    <string name="totalWin">Victory</string>
    <string name="error">Error</string>
    <string name="createError">Game creation failed: %s \n Recreate?</string>
    <string name="tip">hint</string>
    <string name="invalidCell">None selected</string>
    <string name="invalidUndo">Invalid fallback</string>
    <string name="setHighLightSameNumber">Highlight the same number</string>
    <string name="setHighLightRowColumn">Highlight identical rows and columns</string>
    <string name="setHighLightGroup">Highlight same group</string>
    <string name="setHighLightError">Highlight conflicting numbers</string>
    <string name="setting">Settings</string>
    <string name="noRecordData">There is no game record yet! Go and build your way through the barriers</string>
    <string name="createNewGame">Creating game, please wait patiently</string>
    <string name="newPlayer1">First contact with sudoku game？</string>
    <string name="newPlayer2">newbie? It\'s okay, it\'s not as difficult as you think, come to a game first to understand the rules</string>
    <string name="newPlayer3">Master? Here you will face a challenge, let\'s start</string>
    <string name="noAd">No ad, try again later</string>
    <string name="flower">Flower</string>
    <string name="windmill">Windmill</string>
    <string name="stair">Stair</string>
    <string name="cross">Cross</string>
    <string name="butterfly">Butterfly</string>
    <string name="triple">Triple</string>
    <string name="rate">Rate</string>
    <string name="rateContent">May you have a light in the dark, an umbrella in the rain, and someone to accompany you on the way. Looking forward to your five-star review!</string>
    <string name="about">About</string>
    <string name="giveUp">Quit</string>
    <string name="giveUpContent">Giving up halfway is not a good habit. Are you sure you want to do this?</string>
    <string name="yes">Yes</string>
    <string name="yesAd">Yes(AD)</string>
    <string name="no">No</string>
    <string name="restart">Restart</string>
    <string name="restartContent">Are you sure you want to do this?\n This game will not be recorded</string>
    <string name="win">Victory️</string>
    <string name="winContent">What you persist in will one day embrace you in return, and any gains are not coincidental, but the result of day after day\'s effort and persistence</string>
    <string name="guide">Guide</string>
    <string name="revive">Unfortunately</string>
    <string name="reviveContent">I am not afraid of pain or failure, only afraid that when I die, I will still be trapped in this cage, without time or opportunity to prove my bravery.</string>
    <string name="reviveAd">Revival(AD)</string>
    <string name="reviveStar">x%d to revival</string>
    <string name="noEnoughStar">Prop Star not enough</string>
    <string name="moreStar">Earn Star</string>
    <string name="moreStarContent">Receive a bag of star rewards by watch video ad </string>
    <string name="detail1">There are no dreams in this world that cannot be dreamed of, only those who wake up too early.</string>
    <string name="detail2">Strength and confidence are the only sharp blades for you to overcome the thorns on the road to success.</string>
    <string name="detail3">You are not worthy of your ambitions and have failed to live up to the hardships you have suffered.</string>
    <string name="detail4">Sorry, I want to win this one.</string>
    <string name="detail5">Don\'t fall down, there are so many people waiting behind you to see your jokes!</string>
    <string name="detail6">The so-called confusion is that talent cannot match dreams!</string>
    <string name="detail7">The pressure you feel comes from your own lack of effort, lack of positivity, and unwillingness to accept the current situation.</string>
    <string name="detail8">If you don\'t try, how do you know how much you can achieve.</string>
    <string name="detail9">I have been disappointed in this world, but I have never been disappointed in myself.</string>
    <string name="detail10">About the past, about you, come to an end. Regarding the future and me, please stay tuned.</string>
    <string name="splash">You\'re really good! Every time we make progress!</string>
    <string name="hot">hot</string>
    <string name="loading">loading...</string>
    <string name="rechallenge">Today\'s opportunity has already been used up!\nDon\'t regret it after losing it, seize every opportunity and move forward bravely.\nNow take a look at an ad to make up for it</string>
    <string name="exit">Are you leaving now? Come back quickly! I\'m still waiting for you here.</string>
    <string name="ok">OK</string>
    <string name="noExit">Stay a little longer</string>
    <string name="permission">PERMISSION ALLOW</string>
    <string name="permissionRequire">In order to provide you with better service, we need some permission</string>
    <string name="signIn">Sign In</string>
    <string name="signInDetail">Welcome back, we have prepared some small gifts for your return.</string>
    <string name="doubleAd"> x2 (AD)</string>
    <string name="signInNotificationTitle">Sign In</string>
    <string name="signInNotificationContent">There are different surprises waiting for you every day</string>
    <string name="logIn">Log in</string>
    <string name="logOut">Log out</string>
    <string name="leadBoards">LeadBoards</string>
    <string name="logInFail">Login failed, please try again</string>
    <string name="failShowLeadBoards">Fail to show lead boards, try again</string>
    <string name="currentScore">Score:</string>
    <string name="currentRank">Rank:</string>
    <string name="rank">Rank</string>

</resources>