<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:title="@string/home"
        android:icon="@mipmap/ic_home"
        />
    <item
        android:id="@+id/explore"
        android:title="@string/explore"
        android:icon="@mipmap/ic_explore"
        />
    <item
        android:id="@+id/stat"
        android:title="@string/statistics"
        android:icon="@mipmap/ic_stat"
        />
<!--    <item-->
<!--        android:id="@+id/rank"-->
<!--        android:title="@string/rank"-->
<!--        android:icon="@mipmap/ic_5"-->
<!--        />-->
<!--    <item-->
<!--        android:id="@+id/data"-->
<!--        android:title="@string/data"-->
<!--        android:icon="@mipmap/ic_5"-->
<!--        />-->
</menu>