<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/dp16"
    android:paddingRight="@dimen/dp16"
    android:paddingLeft="@dimen/dp16"
    android:paddingBottom="@dimen/dp8"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/dialog_bg">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/giveUp"
        android:textColor="@color/A4"
        android:textSize="@dimen/sp18"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dp24"
        android:paddingBottom="@dimen/dp32"
        android:text="@string/restartContent"
        android:textColor="@color/deepMain"
        android:textSize="@dimen/sp14"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/lightMain"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/content" />

    <TextView
        android:id="@+id/active"
        android:padding="@dimen/dp8"
        android:textSize="@dimen/sp14"
        android:text="@string/yes"
        android:textColor="@color/A3"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/lightMain"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/active" />

    <TextView
        android:id="@+id/inactive"
        android:paddingTop="@dimen/dp8"
        android:textSize="@dimen/sp14"
        android:text="@string/no"
        android:textColor="@color/lightMain"
        app:layout_constraintTop_toBottomOf="@id/divider1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</androidx.constraintlayout.widget.ConstraintLayout>