<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:paddingLeft="@dimen/dp16"
    android:paddingTop="@dimen/dp16"
    android:paddingRight="@dimen/dp16"
    android:paddingBottom="@dimen/dp8">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/giveUp"
        android:textColor="@color/A4"
        android:textSize="@dimen/sp18"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dp24"
        android:paddingBottom="@dimen/dp16"
        android:text="@string/restartContent"
        android:textColor="@color/deepMain"
        android:textSize="@dimen/sp14"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <ImageView
        android:id="@+id/star"
        android:layout_width="@dimen/dp42"
        android:layout_height="@dimen/dp42"
        android:scaleType="centerInside"
        android:src="@mipmap/img_6"
        app:layout_constraintHorizontal_bias="0.43"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/content" />

    <TextView
        android:id="@+id/starCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/dp16"
        android:paddingBottom="@dimen/dp5"
        android:text="x 20"
        android:textColor="@color/A4"
        android:textSize="@dimen/sp18"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/star"
        app:layout_constraintLeft_toRightOf="@id/star" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="@dimen/dp24"
        android:background="@color/lightMain"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/star" />

    <TextView
        android:id="@+id/active"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp8"
        android:text="@string/yes"
        android:textColor="@color/A3"
        android:textSize="@dimen/sp14"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/lightMain"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/active" />

    <TextView
        android:id="@+id/inactive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dp8"
        android:text="@string/no"
        android:textColor="@color/lightMain"
        android:textSize="@dimen/sp14"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider1" />


</androidx.constraintlayout.widget.ConstraintLayout>