<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@mipmap/img_male"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.3" />

    <TextView
        android:id="@+id/displayName"
        android:visibility="gone"
        android:layout_marginTop="@dimen/dp16"
        app:layout_constraintTop_toBottomOf="@id/avatar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_gravity="center_vertical"
        android:textSize="@dimen/sp16"
        android:textColor="@color/A4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/layoutRank"
        android:visibility="gone"
        android:layout_marginTop="@dimen/dp12"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/displayName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/sp12"
            android:textColor="@color/A4"
            android:text="@string/currentScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/score"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/sp18"
            android:textColor="@color/A8"
            android:text="0"
            android:paddingLeft="@dimen/dp2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:paddingLeft="@dimen/dp24"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/sp12"
            android:textColor="@color/A4"
            android:text="@string/currentRank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/rank"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/sp18"
            android:textColor="@color/A8"
            android:text="0"
            android:paddingLeft="@dimen/dp2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp32"
        android:text="@string/logIn"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/sp16"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutRank"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogOut"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp32"
        android:text="@string/logOut"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/sp16"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/avatar"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/leadBoard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp12"
        android:text="@string/leadBoards"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/sp16"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLogOut"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.4" />


</androidx.constraintlayout.widget.ConstraintLayout>